--- a/donor-entry.html
+++ b/donor-entry.html
@@ -57,6 +57,11 @@
 
 <button onclick="saveDonor()">Save Donor</button>
 
+<!-- ✅ ADDED BUTTONS (ONLY THIS SECTION ADDED) -->
+<button onclick="window.location.href='dashboard.html'">Return to Dashboard</button>
+<button onclick="window.location.href='tracking.html'">Go to Tracking</button>
+<!-- ✅ END OF ADDED SECTION -->
+
 </div>
 
 <script>
