--- a/dashboard.html
+++ b/dashboard.html
@@ -56,6 +56,11 @@
         .logout-btn {
             background-color: #444;
         }
+
+        /* ✅ NEW SETTINGS BUTTON STYLE */
+        .settings-btn {
+            background-color: #007bff;
+        }
     </style>
 </head>
 
@@ -72,7 +77,10 @@
 
     <button class="tracking-btn" onclick="goTracking()">Tracking</button>
 
-    <!-- NEW LOGOUT BUTTON -->
+    <!-- ✅ NEW SETTINGS BUTTON -->
+    <button class="settings-btn" onclick="goSettings()">Settings</button>
+
+    <!-- EXISTING LOGOUT BUTTON -->
     <button class="logout-btn" onclick="logout()">Logout</button>
 
 </div>
@@ -85,6 +93,11 @@ function goEntry() {
 
 function goTracking() {
     window.location.href = "tracking.html";
+}
+
+/* ✅ NEW FUNCTION */
+function goSettings() {
+    window.location.href = "settings.html";
 }
 
 function logout() {
