--- a/settings.html
+++ b/settings.html
@@ -4,25 +4,24 @@
     <title>Galloners Club - Settings</title>
     <meta charset="UTF-8">
     <style>
-        body { margin:0; font-family:Arial; background:#f4f4f4; }
+        body { font-family: Arial; background:#f4f4f4; margin:0; }
         header { background:#b30000; color:white; padding:15px; text-align:center; }
         .container {
-            max-width:500px;
-            margin:40px auto;
+            max-width:400px;
+            margin:30px auto;
             background:white;
-            padding:30px;
+            padding:20px;
             border-radius:10px;
-            box-shadow:0px 3px 10px rgba(0,0,0,0.1);
+            box-shadow:0 3px 10px rgba(0,0,0,0.1);
         }
         input {
             width:100%;
             padding:8px;
-            margin-bottom:15px;
+            margin-bottom:10px;
         }
         button {
             width:100%;
             padding:10px;
-            margin-top:10px;
             background:#b30000;
             color:white;
             border:none;
@@ -31,80 +30,62 @@
         }
     </style>
 </head>
+
 <body>
 
 <header>
-    <h2>System Settings</h2>
+    <h2>Category Settings</h2>
 </header>
 
 <div class="container">
 
-<h3>Create New Login</h3>
-<input type="text" id="newUsername" placeholder="New Username">
-<input type="password" id="newPassword" placeholder="New Password">
-<button onclick="createLogin()">Save Login</button>
+<label>Galloner Limit</label>
+<input type="number" id="galloner">
 
-<hr>
+<label>Bronze Limit</label>
+<input type="number" id="bronze">
 
-<h3>Award Limits</h3>
+<label>Silver Limit</label>
+<input type="number" id="silver">
 
-<input type="number" id="gallonerLimit" placeholder="Galloner Limit">
-<input type="number" id="bronzeLimit" placeholder="Bronze Limit">
-<input type="number" id="silverLimit" placeholder="Silver Limit">
-<input type="number" id="goldLimit" placeholder="Gold Limit">
+<label>Gold Limit</label>
+<input type="number" id="gold">
 
-<button onclick="saveLimits()">Save Limits</button>
-
-<button onclick="window.location.href='dashboard.html'">Return to Dashboard</button>
+<button onclick="saveSettings()">Save Settings</button>
 
 </div>
 
 <script>
 
-// Load saved limits
-window.onload = function() {
-
-    let settings = JSON.parse(localStorage.getItem("awardSettings"));
+function loadSettings(){
+    let settings = localStorage.getItem("categorySettings");
 
     if(settings){
-        document.getElementById("gallonerLimit").value = settings.galloner;
-        document.getElementById("bronzeLimit").value = settings.bronze;
-        document.getElementById("silverLimit").value = settings.silver;
-        document.getElementById("goldLimit").value = settings.gold;
-    }
-};
-
-// Create new login
-function createLogin(){
-
-    let username = document.getElementById("newUsername").value;
-    let password = document.getElementById("newPassword").value;
-
-    if(username === "" || password === ""){
-        alert("Fill all login fields.");
-        return;
+        settings = JSON.parse(settings);
+    } else {
+        settings = { galloner:8, bronze:28, silver:46, gold:70 };
     }
 
-    localStorage.setItem("adminUsername", username);
-    localStorage.setItem("adminPassword", password);
-
-    alert("New login saved!");
+    document.getElementById("galloner").value = settings.galloner;
+    document.getElementById("bronze").value = settings.bronze;
+    document.getElementById("silver").value = settings.silver;
+    document.getElementById("gold").value = settings.gold;
 }
 
-// Save award limits
-function saveLimits(){
-
+function saveSettings(){
     let settings = {
-        galloner: parseInt(document.getElementById("gallonerLimit").value),
-        bronze: parseInt(document.getElementById("bronzeLimit").value),
-        silver: parseInt(document.getElementById("silverLimit").value),
-        gold: parseInt(document.getElementById("goldLimit").value)
+        galloner: parseInt(document.getElementById("galloner").value),
+        bronze: parseInt(document.getElementById("bronze").value),
+        silver: parseInt(document.getElementById("silver").value),
+        gold: parseInt(document.getElementById("gold").value)
     };
 
-    localStorage.setItem("awardSettings", JSON.stringify(settings));
-
-    alert("Award limits updated!");
+    localStorage.setItem("categorySettings", JSON.stringify(settings));
+    alert("Settings Saved!");
+    window.location.href="dashboard.html";
 }
+
+window.onload = loadSettings;
 
 </script>
 
