--- a/tracking.html
+++ b/tracking.html
@@ -107,11 +107,28 @@ function getDonors(){
     }
 }
 
+/* ✅ ADDED LIMITER FUNCTION */
+function getCategoryLimits(){
+    let settings = localStorage.getItem("categorySettings");
+
+    if(!settings){
+        return {
+            galloner: 8,
+            bronze: 28,
+            silver: 46,
+            gold: 70
+        };
+    }
+
+    return JSON.parse(settings);
+}
+
 function renderTable(category=null){
 
     let donors = getDonors();
     let table = document.getElementById("donorTable");
     let selectedBloodType = document.getElementById("bloodFilter").value;
+    let limits = getCategoryLimits();
 
     table.innerHTML = "";
 
@@ -126,11 +143,12 @@ function renderTable(category=null){
 
         if(selectedBloodType !== "" && donor.bloodType !== selectedBloodType) return;
 
+        /* ✅ UPDATED LIMIT LOGIC */
         if(category){
-            if(category==="galloner" && serialCount<8) return;
-            if(category==="bronze" && serialCount<28) return;
-            if(category==="silver" && serialCount<46) return;
-            if(category==="gold" && serialCount<70) return;
+            if(category==="galloner" && serialCount < limits.galloner) return;
+            if(category==="bronze" && serialCount < limits.bronze) return;
+            if(category==="silver" && serialCount < limits.silver) return;
+            if(category==="gold" && serialCount < limits.gold) return;
         }
 
         table.innerHTML += `
