--- a/dashboard.html
+++ b/dashboard.html
@@ -53,13 +53,12 @@
             background-color: #ff4d4d;
         }
 
-        .logout-btn {
-            background-color: #444;
+        .award-btn {
+            background-color: #6a1b9a;
         }
 
-        /* ✅ NEW SETTINGS BUTTON STYLE */
-        .settings-btn {
-            background-color: #007bff;
+        .logout-btn {
+            background-color: #444;
         }
     </style>
 </head>
@@ -77,10 +76,9 @@
 
     <button class="tracking-btn" onclick="goTracking()">Tracking</button>
 
-    <!-- ✅ NEW SETTINGS BUTTON -->
-    <button class="settings-btn" onclick="goSettings()">Settings</button>
+    <!-- ✅ NEW AWARDEES BUTTON -->
+    <button class="award-btn" onclick="goAwardees()">Awardees</button>
 
-    <!-- EXISTING LOGOUT BUTTON -->
     <button class="logout-btn" onclick="logout()">Logout</button>
 
 </div>
@@ -96,8 +94,8 @@ function goTracking() {
 }
 
 /* ✅ NEW FUNCTION */
-function goSettings() {
-    window.location.href = "settings.html";
+function goAwardees() {
+    window.location.href = "awardees.html";
 }
 
 function logout() {
