--- a/dashboard.html
+++ b/dashboard.html
@@ -57,6 +57,10 @@
             background-color: #6a1b9a;
         }
 
+        .settings-btn {
+            background-color: #1565c0;
+        }
+
         .logout-btn {
             background-color: #444;
         }
@@ -76,8 +80,10 @@
 
     <button class="tracking-btn" onclick="goTracking()">Tracking</button>
 
-    <!-- ✅ NEW AWARDEES BUTTON -->
     <button class="award-btn" onclick="goAwardees()">Awardees</button>
+
+    <!-- ✅ RESTORED SETTINGS BUTTON -->
+    <button class="settings-btn" onclick="goSettings()">Settings</button>
 
     <button class="logout-btn" onclick="logout()">Logout</button>
 
@@ -93,9 +99,13 @@ function goTracking() {
     window.location.href = "tracking.html";
 }
 
-/* ✅ NEW FUNCTION */
 function goAwardees() {
     window.location.href = "awardees.html";
+}
+
+/* ✅ RESTORED FUNCTION */
+function goSettings() {
+    window.location.href = "settings.html";
 }
 
 function logout() {
