--- a/awardees.html
+++ b/awardees.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Awardees</title>
+    <title>Awardees Monitoring</title>
     <meta charset="UTF-8">
 
     <style>
@@ -9,19 +9,13 @@
         header { background:#b30000; color:white; padding:15px; text-align:center; }
         .container { max-width:95%; margin:20px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 3px 10px rgba(0,0,0,0.1); }
 
-        h3 { margin-top:30px; color:#b30000; }
+        table { width:100%; border-collapse:collapse; margin-top:20px; }
+        th, td { border:1px solid #ddd; padding:8px; text-align:center; }
+        th { background:#b30000; color:white; }
 
-        .donor-row {
-            display:flex;
-            justify-content:space-between;
-            align-items:center;
-            border-bottom:1px solid #ddd;
-            padding:8px 0;
-        }
-
-        .btn {
-            padding:5px 8px;
-            margin-left:5px;
+        button {
+            padding:4px 8px;
+            margin:2px;
             border:none;
             border-radius:4px;
             cursor:pointer;
@@ -33,9 +27,16 @@
         .claimed { background:#1565c0; }
         .unclaimed { background:#6a1b9a; }
 
-        input[type="date"] {
+        input[type="date"] { padding:3px; margin-left:5px; }
+
+        .save-btn {
+            background:#ff9800;
+            color:white;
+            padding:4px 8px;
+            border:none;
+            border-radius:4px;
+            cursor:pointer;
             margin-left:5px;
-            padding:3px;
         }
 
         .top-btn {
@@ -48,32 +49,15 @@
             margin-bottom:15px;
         }
 
-        select {
-            padding:5px;
-            margin-right:10px;
-        }
-
-        .filters {
-            margin-bottom:15px;
-        }
-
-        .save-btn {
-            background:#ff9800;
-            color:white;
-            padding:5px 10px;
-            border:none;
-            border-radius:4px;
-            cursor:pointer;
-            margin-left:5px;
-        }
-
+        .filters { margin-bottom:15px; }
+        select { padding:5px; margin-right:10px; }
     </style>
 </head>
 
 <body>
 
 <header>
-    <h2>Awardees</h2>
+    <h2>Awardees Monitoring</h2>
 </header>
 
 <div class="container">
@@ -98,12 +82,26 @@
     </select>
 </div>
 
-<div id="awardContainer"></div>
+<table>
+<thead>
+<tr>
+<th>#</th>
+<th>Name</th>
+<th>Blood Type</th>
+<th>Serial Count</th>
+<th>Awarded</th>
+<th>Claimed</th>
+<th>Date</th>
+<th>Action</th>
+</tr>
+</thead>
+<tbody id="awardContainer"></tbody>
+</table>
 
 </div>
 
 <script>
-
+// --- Helpers ---
 function getDonors(){
     let data = localStorage.getItem("donors");
     if(!data) return [];
@@ -112,14 +110,12 @@ function getDonors(){
 
 function getCategoryLimits(){
     let settings = localStorage.getItem("categorySettings");
-    if(!settings){
-        return { galloner:8, bronze:28, silver:46, gold:70 };
-    }
+    if(!settings) return { galloner:8, bronze:28, silver:46, gold:70 };
     return JSON.parse(settings);
 }
 
+// --- Render Awardees ---
 function renderAwardees(){
-
     let donors = getDonors();
     let limits = getCategoryLimits();
     let container = document.getElementById("awardContainer");
@@ -128,46 +124,48 @@ function renderAwardees(){
 
     container.innerHTML = "";
 
-    let categories = {
-        galloner: limits.galloner,
-        bronze: limits.bronze,
-        silver: limits.silver,
-        gold: limits.gold
-    };
+    let categories = { galloner:limits.galloner, bronze:limits.bronze, silver:limits.silver, gold:limits.gold };
+    let rowIndex = 1;
 
     for(let category in categories){
-
-        container.innerHTML += `<h3>${category.toUpperCase()}</h3>`;
-
         donors.forEach((donor,index)=>{
-
             let serialCount = donor.serials ? donor.serials.length : 0;
-
             if(serialCount < categories[category]) return;
-
             if(bloodFilter && donor.bloodType !== bloodFilter) return;
-
             if(statusFilter && (!donor.awardStatus || !donor.awardStatus[statusFilter])) return;
 
             let fullName = `${donor.firstName || ""} ${donor.middleName || ""} ${donor.surname || ""}`;
 
+            let awardedDate = donor.awardStatus && donor.awardStatus.awarded ? donor.awardStatus.awarded : "";
+            let claimedDate = donor.awardStatus && donor.awardStatus.claimed ? donor.awardStatus.claimed : "";
+
             container.innerHTML += `
-                <div class="donor-row" id="donorRow${index}${category}">
-                    <div>${fullName}</div>
-                    <div>
-                        <button class="btn awarded" onclick="setTempStatus(${index},'awarded','${category}')">Awarded</button>
-                        <button class="btn notawarded" onclick="setTempStatus(${index},'notawarded','${category}')">Not Awarded</button>
-                        <button class="btn claimed" onclick="setTempStatus(${index},'claimed','${category}')">Claimed</button>
-                        <button class="btn unclaimed" onclick="setTempStatus(${index},'unclaimed','${category}')">Unclaimed</button>
-                        <input type="date" id="tempDate${index}${category}" style="display:none; margin-left:5px;">
+                <tr id="row${index}${category}">
+                    <td>${rowIndex++}</td>
+                    <td>${fullName}</td>
+                    <td>${donor.bloodType || ""} ${donor.rhFactor || ""}</td>
+                    <td>${serialCount}</td>
+                    <td>
+                        <button class="awarded" onclick="setTempStatus(${index},'awarded','${category}')">Awarded</button>
+                        <button class="notawarded" onclick="setTempStatus(${index},'notawarded','${category}')">Not Awarded</button>
+                    </td>
+                    <td>
+                        <button class="claimed" onclick="setTempStatus(${index},'claimed','${category}')">Claimed</button>
+                        <button class="unclaimed" onclick="setTempStatus(${index},'unclaimed','${category}')">Unclaimed</button>
+                    </td>
+                    <td>
+                        <input type="date" id="tempDate${index}${category}" value="${awardedDate || claimedDate}" style="display:none;">
+                    </td>
+                    <td>
                         <button class="save-btn" id="saveBtn${index}${category}" style="display:none;" onclick="saveStatus(${index},'${category}')">Save</button>
-                    </div>
-                </div>
+                    </td>
+                </tr>
             `;
         });
     }
 }
 
+// --- Temporary Status Store ---
 let tempStatusStore = {};
 
 function setTempStatus(index,type,category){
@@ -183,33 +181,27 @@ function setTempStatus(index,type,category){
     dateInput.value = tempStatusStore[index][category].date;
 }
 
+// --- Save Status ---
 function saveStatus(index,category){
     let donors = getDonors();
-    if(!donors[index].awardStatus){
-        donors[index].awardStatus = {};
-    }
+    if(!donors[index].awardStatus) donors[index].awardStatus = {};
 
     if(tempStatusStore[index] && tempStatusStore[index][category]){
         let ts = tempStatusStore[index][category];
-        donors[index].awardStatus[ts.type] = ts.date;
+        donors[index].awardStatus[ts.type] = document.getElementById("tempDate"+index+category).value;
     }
 
     localStorage.setItem("donors", JSON.stringify(donors));
 
-    // hide inputs and save button after saving
     document.getElementById("tempDate"+index+category).style.display = "none";
     document.getElementById("saveBtn"+index+category).style.display = "none";
 
     renderAwardees();
 }
 
-function goDashboard(){
-    window.location.href="dashboard.html";
-}
+function goDashboard(){ window.location.href="dashboard.html"; }
 
-window.onload = function(){
-    renderAwardees();
-};
+window.onload = function(){ renderAwardees(); };
 
 </script>
 
