--- a/awardees.html
+++ b/awardees.html
@@ -22,10 +22,10 @@
             color:white;
         }
 
-        .awarded { background:#2e7d32; }
-        .notawarded { background:#c62828; }
-        .claimed { background:#1565c0; }
-        .unclaimed { background:#6a1b9a; }
+        .awarded { background:#2e7d32; } /* green */
+        .notawarded { background:#c62828; } /* red */
+        .claimed { background:#1565c0; } /* blue */
+        .unclaimed { background:#6a1b9a; } /* purple */
 
         input[type="date"] { padding:3px; margin-left:5px; }
 
@@ -51,6 +51,12 @@
 
         .filters { margin-bottom:15px; }
         select { padding:5px; margin-right:10px; }
+
+        /* Highlight status cells */
+        td.status-awarded { background:#c8e6c9; } /* light green */
+        td.status-notawarded { background:#ffcdd2; } /* light red */
+        td.status-claimed { background:#bbdefb; } /* light blue */
+        td.status-unclaimed { background:#e1bee7; } /* light purple */
     </style>
 </head>
 
@@ -145,18 +151,16 @@ function renderAwardees(){
                     <td>${fullName}</td>
                     <td>${donor.bloodType || ""} ${donor.rhFactor || ""}</td>
                     <td>${serialCount}</td>
-                    <td>
-                        <button class="awarded" onclick="setTempStatus(${index},'awarded','${category}')">Awarded</button>
-                        <button class="notawarded" onclick="setTempStatus(${index},'notawarded','${category}')">Not Awarded</button>
-                    </td>
-                    <td>
-                        <button class="claimed" onclick="setTempStatus(${index},'claimed','${category}')">Claimed</button>
-                        <button class="unclaimed" onclick="setTempStatus(${index},'unclaimed','${category}')">Unclaimed</button>
-                    </td>
+                    <td class="status-awarded">${awardedDate ? "Awarded" : ""}</td>
+                    <td class="status-claimed">${claimedDate ? "Claimed" : ""}</td>
                     <td>
                         <input type="date" id="tempDate${index}${category}" value="${awardedDate || claimedDate}" style="display:none;">
                     </td>
                     <td>
+                        <button class="awarded" onclick="setTempStatus(${index},'awarded','${category}')">Awarded</button>
+                        <button class="notawarded" onclick="setTempStatus(${index},'notawarded','${category}')">Not Awarded</button>
+                        <button class="claimed" onclick="setTempStatus(${index},'claimed','${category}')">Claimed</button>
+                        <button class="unclaimed" onclick="setTempStatus(${index},'unclaimed','${category}')">Unclaimed</button>
                         <button class="save-btn" id="saveBtn${index}${category}" style="display:none;" onclick="saveStatus(${index},'${category}')">Save</button>
                     </td>
                 </tr>
@@ -202,7 +206,6 @@ function saveStatus(index,category){
 function goDashboard(){ window.location.href="dashboard.html"; }
 
 window.onload = function(){ renderAwardees(); };
-
 </script>
 
 </body>
