--- a/awardees.html
+++ b/awardees.html
@@ -1,92 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Awardees Monitoring</title>
+    <title>Galloners Club - Awardees</title>
     <meta charset="UTF-8">
-
     <style>
         body { margin:0; font-family:Arial; background:#f4f4f4; }
         header { background:#b30000; color:white; padding:15px; text-align:center; }
+        .logo { width:100px; display:block; margin:10px auto; }
         .container { max-width:95%; margin:20px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 3px 10px rgba(0,0,0,0.1); }
-
-        table { width:100%; border-collapse:collapse; margin-top:20px; }
-        th, td { border:1px solid #ddd; padding:8px; text-align:center; }
+        table { width:100%; border-collapse:collapse; }
+        th, td { padding:8px; border:1px solid #ddd; text-align:center; }
         th { background:#b30000; color:white; }
-
-        button {
-            padding:4px 8px;
-            margin:2px;
-            border:none;
-            border-radius:4px;
-            cursor:pointer;
-            color:white;
-        }
-
-        .awarded { background:#2e7d32; } /* green */
-        .notawarded { background:#c62828; } /* red */
-        .claimed { background:#1565c0; } /* blue */
-        .unclaimed { background:#6a1b9a; } /* purple */
-
-        input[type="date"] { padding:3px; margin-left:5px; }
-
-        .save-btn {
-            background:#ff9800;
-            color:white;
-            padding:4px 8px;
-            border:none;
-            border-radius:4px;
-            cursor:pointer;
-            margin-left:5px;
-        }
-
-        .top-btn {
-            background:#b30000;
-            color:white;
-            padding:8px 12px;
-            border:none;
-            border-radius:5px;
-            cursor:pointer;
-            margin-bottom:15px;
-        }
-
-        .filters { margin-bottom:15px; }
-        select { padding:5px; margin-right:10px; }
-
-        /* Highlight status cells */
-        td.status-awarded { background:#c8e6c9; } /* light green */
-        td.status-notawarded { background:#ffcdd2; } /* light red */
-        td.status-claimed { background:#bbdefb; } /* light blue */
-        td.status-unclaimed { background:#e1bee7; } /* light purple */
+        button { padding:5px 8px; margin:2px; border:none; border-radius:4px; cursor:pointer; color:white; }
+        .top-btn { background:#b30000; }
+        .galloner-btn { background:#1e88e5; }
+        .bronze-btn { background:#cd7f32; }
+        .silver-btn { background:#9e9e9e; }
+        .gold-btn { background:#d4af37; color:black; }
+        .filter-btn { background:#222; }
+        .serial-box { background:#f9f9f9; border:1px solid #ccc; padding:10px; border-radius:6px; display:none; margin-top:5px; }
+        .serial-item { display:flex; justify-content:space-between; align-items:center; margin-bottom:6px; }
+        .serial-item input { padding:4px; margin-right:5px; }
+        select { padding:5px; margin-right:5px; }
     </style>
 </head>
-
 <body>
 
 <header>
+    <img src="images/logo.png" class="logo">
     <h2>Awardees Monitoring</h2>
 </header>
 
 <div class="container">
 
+<input type="text" id="searchInput" placeholder="Search donor..." onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
+<select id="bloodFilter" onchange="renderTable()">
+    <option value="">All Blood Types</option>
+    <option value="A">A</option>
+    <option value="B">B</option>
+    <option value="AB">AB</option>
+    <option value="O">O</option>
+</select>
+
+<select id="statusFilter" onchange="renderTable()">
+    <option value="">All Status</option>
+    <option value="awarded">Awarded</option>
+    <option value="notawarded">Not Awarded</option>
+    <option value="claimed">Claimed</option>
+    <option value="unclaimed">Unclaimed</option>
+</select>
+
+<button class="top-btn" onclick="exportToGoogleSheet()">Export CSV</button>
 <button class="top-btn" onclick="goDashboard()">Return to Dashboard</button>
+<button class="top-btn" onclick="printAllCategories()">Print All Categories</button>
 
-<div class="filters">
-    <select id="bloodFilter" onchange="renderAwardees()">
-        <option value="">All Blood Types</option>
-        <option value="A">A</option>
-        <option value="B">B</option>
-        <option value="AB">AB</option>
-        <option value="O">O</option>
-    </select>
+<br><br>
 
-    <select id="statusFilter" onchange="renderAwardees()">
-        <option value="">All Statuses</option>
-        <option value="awarded">Awarded</option>
-        <option value="notawarded">Not Awarded</option>
-        <option value="claimed">Claimed</option>
-        <option value="unclaimed">Unclaimed</option>
-    </select>
-</div>
+<button class="galloner-btn" onclick="filterByCategory('galloner')">Galloners</button>
+<button class="bronze-btn" onclick="filterByCategory('bronze')">Bronze</button>
+<button class="silver-btn" onclick="filterByCategory('silver')">Silver</button>
+<button class="gold-btn" onclick="filterByCategory('gold')">Gold</button>
+<button class="filter-btn" onclick="renderTable()">Show All</button>
+
+<br><br>
 
 <table>
 <thead>
@@ -95,118 +71,156 @@
 <th>Name</th>
 <th>Blood Type</th>
 <th>Serial Count</th>
+<th>Serial Numbers</th>
 <th>Awarded</th>
 <th>Claimed</th>
-<th>Date</th>
 <th>Action</th>
 </tr>
 </thead>
-<tbody id="awardContainer"></tbody>
+<tbody id="donorTable"></tbody>
 </table>
 
 </div>
 
 <script>
-// --- Helpers ---
+// --- Storage Helpers ---
 function getDonors(){
     let data = localStorage.getItem("donors");
     if(!data) return [];
-    return JSON.parse(data);
+    try { return JSON.parse(data); } catch(e){ return []; }
 }
 
 function getCategoryLimits(){
-    let settings = localStorage.getItem("categorySettings");
-    if(!settings) return { galloner:8, bronze:28, silver:46, gold:70 };
-    return JSON.parse(settings);
+    return JSON.parse(localStorage.getItem("categoryLimits")) || { galloner:8, bronze:28, silver:46, gold:70 };
 }
 
-// --- Render Awardees ---
-function renderAwardees(){
+function saveDonorStatus(index, field, value){
+    let donors = getDonors();
+    donors[index].awardStatus = donors[index].awardStatus || {};
+    donors[index].awardStatus[field] = value;
+    localStorage.setItem("donors", JSON.stringify(donors));
+    renderTable();
+}
+
+// --- Render Table ---
+function renderTable(category=null){
+    let donors = getDonors();
+    let table = document.getElementById("donorTable");
+    let selectedBloodType = document.getElementById("bloodFilter").value;
+    let selectedStatus = document.getElementById("statusFilter").value;
+    let limits = getCategoryLimits();
+    table.innerHTML = "";
+    let count = 1;
+
+    donors.forEach((donor,index)=>{
+        let serialCount = donor.serials ? donor.serials.length : 0;
+
+        if(category && serialCount < limits[category]) return;
+        if(selectedBloodType && donor.bloodType !== selectedBloodType) return;
+
+        let status = donor.awardStatus || {};
+        if(selectedStatus){
+            if(selectedStatus==="awarded" && !status.awarded) return;
+            if(selectedStatus==="notawarded" && status.awarded) return;
+            if(selectedStatus==="claimed" && !status.claimed) return;
+            if(selectedStatus==="unclaimed" && status.claimed) return;
+        }
+
+        table.innerHTML += `
+        <tr>
+            <td>${count++}</td>
+            <td><a href="javascript:void(0)" onclick="toggleSerial(${index})">${donor.firstName} ${donor.middleName} ${donor.surname}</a></td>
+            <td>${donor.bloodType} ${donor.rhFactor}</td>
+            <td>${serialCount}</td>
+            <td>
+                <div class="serial-box" id="serialList${index}">${(donor.serials||[]).map(s=>s.serial+"-"+s.date).join("<br>")}</div>
+            </td>
+            <td>
+                <select onchange="saveDonorStatus(${index}, 'awarded', this.value)">
+                    <option value="">Select</option>
+                    <option value="awarded" ${status.awarded==='awarded'?'selected':''}>Awarded</option>
+                    <option value="notawarded" ${status.awarded==='notawarded'?'selected':''}>Not Awarded</option>
+                </select>
+                <input type="date" value="${status.awardDate||''}" onchange="saveDonorStatus(${index}, 'awardDate', this.value)">
+            </td>
+            <td>
+                <select onchange="saveDonorStatus(${index}, 'claimed', this.value)">
+                    <option value="">Select</option>
+                    <option value="claimed" ${status.claimed==='claimed'?'selected':''}>Claimed</option>
+                    <option value="unclaimed" ${status.claimed==='unclaimed'?'selected':''}>Unclaimed</option>
+                </select>
+                <input type="date" value="${status.claimDate||''}" onchange="saveDonorStatus(${index}, 'claimDate', this.value)">
+            </td>
+            <td><button onclick="saveDonorStatus(${index}, 'saved','yes')">Save</button></td>
+        </tr>
+        `;
+    });
+}
+
+function toggleSerial(index){
+    let box = document.getElementById("serialList"+index);
+    box.style.display = box.style.display==="none"?"block":"none";
+}
+
+// --- Filters ---
+function filterByCategory(type){ renderTable(type); }
+function searchDonor(){
+    let input = document.getElementById("searchInput").value.toLowerCase();
+    document.querySelectorAll("#donorTable tr").forEach(row=>{
+        row.style.display = row.innerText.toLowerCase().includes(input) ? "" : "none";
+    });
+}
+
+// --- Navigation ---
+function goDashboard(){ window.location.href="dashboard.html"; }
+function exportToGoogleSheet(){
+    let donors = getDonors();
+    let csv = "Blood Type,Rh Factor,First Name,Middle Name,Surname,Birthday,Contact,Awarded,Claimed,AwardDate,ClaimDate\n";
+    donors.forEach(d=>{
+        let s = d.awardStatus||{};
+        csv += `${d.bloodType},${d.rhFactor},${d.firstName},${d.middleName},${d.surname},${d.birthday},${d.contact},${s.awarded||''},${s.claimed||''},${s.awardDate||''},${s.claimDate||''}\n`;
+    });
+    let blob = new Blob([csv], {type:"text/csv"});
+    let url = window.URL.createObjectURL(blob);
+    let a = document.createElement("a");
+    a.href = url; a.download="awardees.csv"; a.click();
+    window.URL.revokeObjectURL(url);
+}
+
+// --- Print All Categories ---
+function printAllCategories(){
     let donors = getDonors();
     let limits = getCategoryLimits();
-    let container = document.getElementById("awardContainer");
-    let bloodFilter = document.getElementById("bloodFilter").value;
-    let statusFilter = document.getElementById("statusFilter").value;
+    let categories = ['galloner','bronze','silver','gold'];
+    let content = `<h1>Awardees Monitoring - All Categories</h1>`;
 
-    container.innerHTML = "";
-
-    let categories = { galloner:limits.galloner, bronze:limits.bronze, silver:limits.silver, gold:limits.gold };
-    let rowIndex = 1;
-
-    for(let category in categories){
-        donors.forEach((donor,index)=>{
-            let serialCount = donor.serials ? donor.serials.length : 0;
-            if(serialCount < categories[category]) return;
-            if(bloodFilter && donor.bloodType !== bloodFilter) return;
-            if(statusFilter && (!donor.awardStatus || !donor.awardStatus[statusFilter])) return;
-
-            let fullName = `${donor.firstName || ""} ${donor.middleName || ""} ${donor.surname || ""}`;
-
-            let awardedDate = donor.awardStatus && donor.awardStatus.awarded ? donor.awardStatus.awarded : "";
-            let claimedDate = donor.awardStatus && donor.awardStatus.claimed ? donor.awardStatus.claimed : "";
-
-            container.innerHTML += `
-                <tr id="row${index}${category}">
-                    <td>${rowIndex++}</td>
-                    <td>${fullName}</td>
-                    <td>${donor.bloodType || ""} ${donor.rhFactor || ""}</td>
-                    <td>${serialCount}</td>
-                    <td class="status-awarded">${awardedDate ? "Awarded" : ""}</td>
-                    <td class="status-claimed">${claimedDate ? "Claimed" : ""}</td>
-                    <td>
-                        <input type="date" id="tempDate${index}${category}" value="${awardedDate || claimedDate}" style="display:none;">
-                    </td>
-                    <td>
-                        <button class="awarded" onclick="setTempStatus(${index},'awarded','${category}')">Awarded</button>
-                        <button class="notawarded" onclick="setTempStatus(${index},'notawarded','${category}')">Not Awarded</button>
-                        <button class="claimed" onclick="setTempStatus(${index},'claimed','${category}')">Claimed</button>
-                        <button class="unclaimed" onclick="setTempStatus(${index},'unclaimed','${category}')">Unclaimed</button>
-                        <button class="save-btn" id="saveBtn${index}${category}" style="display:none;" onclick="saveStatus(${index},'${category}')">Save</button>
-                    </td>
-                </tr>
-            `;
+    categories.forEach(category=>{
+        content += `<h2>${category.toUpperCase()}</h2>`;
+        content += `<table border="1" cellpadding="5" cellspacing="0" style="border-collapse:collapse;width:100%">
+            <tr><th>#</th><th>Name</th><th>Blood Type</th><th>Serial Count</th><th>Serial Numbers</th><th>Awarded</th><th>Claimed</th></tr>`;
+        let count=1;
+        donors.forEach(d=>{
+            let serialCount = d.serials?d.serials.length:0;
+            if(serialCount<limits[category]) return;
+            let s=d.awardStatus||{};
+            content += `<tr>
+                <td>${count++}</td>
+                <td>${d.firstName} ${d.middleName} ${d.surname}</td>
+                <td>${d.bloodType} ${d.rhFactor}</td>
+                <td>${serialCount}</td>
+                <td>${(d.serials||[]).map(s=>s.serial+"-"+s.date).join("<br>")}</td>
+                <td>${s.awarded||''}</td>
+                <td>${s.claimed||''}</td>
+            </tr>`;
         });
-    }
+        content += `</table><br>`;
+    });
+    let w=window.open("");
+    w.document.write(content);
+    w.print();
 }
 
-// --- Temporary Status Store ---
-let tempStatusStore = {};
-
-function setTempStatus(index,type,category){
-    let dateInput = document.getElementById("tempDate"+index+category);
-    let saveBtn = document.getElementById("saveBtn"+index+category);
-
-    dateInput.style.display = "inline-block";
-    saveBtn.style.display = "inline-block";
-
-    tempStatusStore[index] = tempStatusStore[index] || {};
-    tempStatusStore[index][category] = { type: type, date: new Date().toISOString().split("T")[0] };
-
-    dateInput.value = tempStatusStore[index][category].date;
-}
-
-// --- Save Status ---
-function saveStatus(index,category){
-    let donors = getDonors();
-    if(!donors[index].awardStatus) donors[index].awardStatus = {};
-
-    if(tempStatusStore[index] && tempStatusStore[index][category]){
-        let ts = tempStatusStore[index][category];
-        donors[index].awardStatus[ts.type] = document.getElementById("tempDate"+index+category).value;
-    }
-
-    localStorage.setItem("donors", JSON.stringify(donors));
-
-    document.getElementById("tempDate"+index+category).style.display = "none";
-    document.getElementById("saveBtn"+index+category).style.display = "none";
-
-    renderAwardees();
-}
-
-function goDashboard(){ window.location.href="dashboard.html"; }
-
-window.onload = function(){ renderAwardees(); };
+window.onload = function(){ renderTable(); };
 </script>
-
 </body>
 </html>
