--- a/dashboard.html
+++ b/dashboard.html
@@ -91,6 +91,13 @@
 
 <script>
 
+// ✅ Redirect to login if not logged in
+window.onload = function() {
+    if(localStorage.getItem("isLoggedIn") !== "true") {
+        window.location.href = "login.html";
+    }
+}
+
 function goEntry() {
     window.location.href = "donor-entry.html";
 }
@@ -108,9 +115,10 @@ function goSettings() {
     window.location.href = "settings.html";
 }
 
+// ✅ Logout function
 function logout() {
-    localStorage.removeItem("isLoggedIn");
-    window.location.href = "login.html";
+    localStorage.removeItem("isLoggedIn"); // Clear login state
+    window.location.href = "login.html";    // Redirect to login page
 }
 
 </script>
