--- a/index.html
+++ b/index.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Galloners Club - Login</title>
+    <title>Galloners Club - Settings</title>
     <meta charset="UTF-8">
 
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #b30000;
+            background-color: #f4f4f4;
         }
 
-        .login-box {
-            background-color: white;
-            width: 350px;
+        header {
+            background-color: #b30000;
+            color: white;
+            padding: 15px;
+            text-align: center;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 50px auto;
+            background: white;
             padding: 30px;
             border-radius: 10px;
-            text-align: center;
-            box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
-
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .logo {
-            width: 120px;
-            margin-bottom: 15px;
-        }
-
-        h2 {
-            color: #b30000;
-            margin-bottom: 20px;
+            box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
         }
 
         input {
@@ -45,56 +37,88 @@
 
         button {
             width: 100%;
-            padding: 10px;
-            background-color: #b30000;
-            color: white;
+            padding: 12px;
+            margin-top: 10px;
             border: none;
             border-radius: 5px;
             font-weight: bold;
             cursor: pointer;
+            color: white;
         }
 
-        button:hover {
-            background-color: #800000;
+        .save-btn {
+            background-color: #1e88e5;
+        }
+
+        .reset-btn {
+            background-color: #c62828;
+        }
+
+        .back-btn {
+            background-color: #444;
         }
     </style>
 </head>
-
 <body>
 
-    <div class="login-box">
-        <img src="images/logo.png" alt="Galloners Club Logo" class="logo">
+<header>
+    <h2>Settings</h2>
+</header>
 
-        <h2>Galloners Club</h2>
+<div class="container">
+    <h3>Change Username & Password</h3>
+    <input type="text" id="newUsername" placeholder="New Username">
+    <input type="password" id="newPassword" placeholder="New Password">
+    <button class="save-btn" onclick="saveCredentials()">Save</button>
 
-        <input type="text" id="username" placeholder="Username">
-        <input type="password" id="password" placeholder="Password">
+    <hr>
 
-        <button onclick="login()">Login</button>
-    </div>
+    <h3>Master Reset</h3>
+    <button class="reset-btn" onclick="masterReset()">Reset to Default</button>
 
-    <script>
-        // Prevent logged-in users from accessing login page
-        window.onload = function() {
-            if(localStorage.getItem("isLoggedIn") === "true") {
-                window.location.href = "dashboard.html";
-            }
+    <hr>
+
+    <button class="back-btn" onclick="goDashboard()">Back to Dashboard</button>
+</div>
+
+<script>
+    // Only allow access if logged in
+    window.onload = function() {
+        if(localStorage.getItem("isLoggedIn") !== "true") {
+            window.location.href = "login.html";
+        }
+    }
+
+    // Save new credentials
+    function saveCredentials() {
+        let user = document.getElementById("newUsername").value.trim();
+        let pass = document.getElementById("newPassword").value.trim();
+
+        if(user === "" || pass === "") {
+            alert("Enter both username and password!");
+            return;
         }
 
-        function login() {
-            var user = document.getElementById("username").value;
-            var pass = document.getElementById("password").value;
+        localStorage.setItem("username", user);
+        localStorage.setItem("password", pass);
+        alert("Credentials updated successfully!");
+        document.getElementById("newUsername").value = "";
+        document.getElementById("newPassword").value = "";
+    }
 
-            if (user === "admin" && pass === "1234") {
-                localStorage.setItem("isLoggedIn", "true"); // ✅ Save login state
-                window.location.href = "dashboard.html";
-            } else {
-                alert("Invalid Username or Password");
-            }
+    // Master reset (sets back to default admin credentials)
+    function masterReset() {
+        if(confirm("Are you sure you want to reset to default credentials?")) {
+            localStorage.setItem("username", "admin");
+            localStorage.setItem("password", "1234");
+            alert("Credentials reset to default!");
         }
+    }
 
-        // Logout is handled on dashboard page, so no change needed here
-    </script>
+    function goDashboard() {
+        window.location.href = "dashboard.html";
+    }
+</script>
 
 </body>
 </html>
