--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             border-radius: 10px;
             text-align: center;
             box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
-
             position: absolute;
             top: 50%;
             left: 50%;
@@ -74,13 +73,6 @@
     </div>
 
     <script>
-        // Default credentials if not set
-        if(!localStorage.getItem("username")) localStorage.setItem("username", "admin");
-        if(!localStorage.getItem("password")) localStorage.setItem("password", "1234");
-
-        const MASTER_USER = "master";
-        const MASTER_PASS = "master123";
-
         // Prevent logged-in users from accessing login page
         window.onload = function() {
             if(localStorage.getItem("isLoggedIn") === "true") {
@@ -89,27 +81,20 @@
         }
 
         function login() {
-            var user = document.getElementById("username").value;
-            var pass = document.getElementById("password").value;
+            // Get saved credentials, or default
+            let savedUser = localStorage.getItem("username") || "admin";
+            let savedPass = localStorage.getItem("password") || "1234";
 
-            let savedUser = localStorage.getItem("username");
-            let savedPass = localStorage.getItem("password");
+            let user = document.getElementById("username").value;
+            let pass = document.getElementById("password").value;
 
-            if ((user === savedUser && pass === savedPass) || (user === MASTER_USER && pass === MASTER_PASS)) {
-                localStorage.setItem("isLoggedIn", "true"); // ✅ Save login state
+            if(user === savedUser && pass === savedPass) {
+                localStorage.setItem("isLoggedIn", "true"); // Save login state
                 window.location.href = "dashboard.html";
             } else {
                 alert("Invalid Username or Password");
             }
         }
-
-        // ✅ Function to change username/password (called from settings page)
-        function changeCredentials(newUser, newPass) {
-            localStorage.setItem("username", newUser);
-            localStorage.setItem("password", newPass);
-            alert("Username and password updated successfully!");
-        }
-
     </script>
 
 </body>
