--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             border-radius: 10px;
             text-align: center;
             box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
+
             position: absolute;
             top: 50%;
             left: 50%;
@@ -73,23 +74,11 @@
     </div>
 
     <script>
-        // Prevent logged-in users from accessing login page
-        window.onload = function() {
-            if(localStorage.getItem("isLoggedIn") === "true") {
-                window.location.href = "dashboard.html";
-            }
-        }
-
         function login() {
-            // Get saved credentials, or default
-            let savedUser = localStorage.getItem("username") || "admin";
-            let savedPass = localStorage.getItem("password") || "1234";
+            var user = document.getElementById("username").value;
+            var pass = document.getElementById("password").value;
 
-            let user = document.getElementById("username").value;
-            let pass = document.getElementById("password").value;
-
-            if(user === savedUser && pass === savedPass) {
-                localStorage.setItem("isLoggedIn", "true"); // Save login state
+            if (user === "admin" && pass === "1234") {
                 window.location.href = "dashboard.html";
             } else {
                 alert("Invalid Username or Password");
