--- a/index.html
+++ b/index.html
@@ -74,16 +74,26 @@
     </div>
 
     <script>
+        // Prevent logged-in users from accessing login page
+        window.onload = function() {
+            if(localStorage.getItem("isLoggedIn") === "true") {
+                window.location.href = "dashboard.html";
+            }
+        }
+
         function login() {
             var user = document.getElementById("username").value;
             var pass = document.getElementById("password").value;
 
             if (user === "admin" && pass === "1234") {
+                localStorage.setItem("isLoggedIn", "true"); // ✅ Save login state
                 window.location.href = "dashboard.html";
             } else {
                 alert("Invalid Username or Password");
             }
         }
+
+        // Logout is handled on dashboard page, so no change needed here
     </script>
 
 </body>
