--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             border-radius: 10px;
             text-align: center;
             box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
-
             position: absolute;
             top: 50%;
             left: 50%;
@@ -62,39 +61,37 @@
 
 <body>
 
-    <div class="login-box">
-        <img src="images/logo.png" alt="Galloners Club Logo" class="logo">
+<div class="login-box">
+    <img src="images/logo.png" alt="Galloners Club Logo" class="logo">
+    <h2>Galloners Club</h2>
 
-        <h2>Galloners Club</h2>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
 
-        <input type="text" id="username" placeholder="Username">
-        <input type="password" id="password" placeholder="Password">
+    <button onclick="login()">Login</button>
+</div>
 
-        <button onclick="login()">Login</button>
-    </div>
-
-    <script>
-        // Prevent logged-in users from accessing login page
-        window.onload = function() {
-            if(localStorage.getItem("isLoggedIn") === "true") {
-                window.location.href = "dashboard.html";
-            }
+<script>
+    // Clear any previous login on page load
+    window.onload = function() {
+        if(localStorage.getItem("isLoggedIn") === "true") {
+            window.location.href = "dashboard.html"; // Make sure this file exists
         }
+    }
 
-        function login() {
-            var user = document.getElementById("username").value;
-            var pass = document.getElementById("password").value;
+    function login() {
+        var user = document.getElementById("username").value.trim();
+        var pass = document.getElementById("password").value.trim();
 
-            if (user === "admin" && pass === "1234") {
-                localStorage.setItem("isLoggedIn", "true"); // ✅ Save login state
-                window.location.href = "dashboard.html";
-            } else {
-                alert("Invalid Username or Password");
-            }
+        if(user === "admin" && pass === "1234") {
+            localStorage.setItem("isLoggedIn", "true"); // Save login state
+            alert("Login successful!"); // Optional, for debugging
+            window.location.href = "dashboard.html";
+        } else {
+            alert("Invalid Username or Password");
         }
-
-        // Logout is handled on dashboard page, so no change needed here
-    </script>
+    }
+</script>
 
 </body>
 </html>
