--- a/index.html
+++ b/index.html
@@ -71,11 +71,35 @@
     <button onclick="login()">Login</button>
 </div>
 
+<!-- ✅ FIREBASE CDN VERSION (WORKS WITH PLAIN HTML) -->
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-analytics.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+        apiKey: "AIzaSyByh0YJ11ZpbRV7EoDoLnqgFxe1r68efPI",
+        authDomain: "galloners-club.firebaseapp.com",
+        projectId: "galloners-club",
+        storageBucket: "galloners-club.firebasestorage.app",
+        messagingSenderId: "213049860421",
+        appId: "1:213049860421:web:4156aaa52b945f48711e2c",
+        measurementId: "G-XYXJH9JNXJ"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const db = getFirestore(app);
+
+    // Make database accessible globally
+    window.db = db;
+</script>
+
+<!-- ✅ YOUR ORIGINAL LOGIN SCRIPT (UNCHANGED LOGIC) -->
 <script>
-    // Clear any previous login on page load
     window.onload = function() {
         if(localStorage.getItem("isLoggedIn") === "true") {
-            window.location.href = "dashboard.html"; // Make sure this file exists
+            window.location.href = "dashboard.html";
         }
     }
 
@@ -84,8 +108,7 @@
         var pass = document.getElementById("password").value.trim();
 
         if(user === "admin" && pass === "1234") {
-            localStorage.setItem("isLoggedIn", "true"); // Save login state
-            alert("Login successful!"); // Optional, for debugging
+            localStorage.setItem("isLoggedIn", "true");
             window.location.href = "dashboard.html";
         } else {
             alert("Invalid Username or Password");
