--- a/donor-entry.html
+++ b/donor-entry.html
@@ -56,19 +56,33 @@
 <hr>
 
 <button onclick="saveDonor()">Save Donor</button>
-
-<!-- ✅ ADDED BUTTONS (ONLY THIS SECTION ADDED) -->
 <button onclick="window.location.href='dashboard.html'">Return to Dashboard</button>
 <button onclick="window.location.href='tracking.html'">Go to Tracking</button>
-<!-- ✅ END OF ADDED SECTION -->
 
 </div>
 
-<script>
+<!-- 🔥 FIREBASE + CLOUD SAVE INTEGRATED -->
+<script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+const firebaseConfig = {
+    apiKey: "AIzaSyByh0YJ11ZpbRV7EoDoLnqgFxe1r68efPI",
+    authDomain: "galloners-club.firebaseapp.com",
+    projectId: "galloners-club",
+    storageBucket: "galloners-club.firebasestorage.app",
+    messagingSenderId: "213049860421",
+    appId: "1:213049860421:web:4156aaa52b945f48711e2c",
+    measurementId: "G-XYXJH9JNXJ"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
 let serials = [];
 
-function addSerial(){
+window.addSerial = function(){
     let serial = document.getElementById("serialInput").value;
     let date = document.getElementById("dateInput").value;
 
@@ -99,15 +113,12 @@ function renderSerials(){
     });
 }
 
-function removeSerial(index){
+window.removeSerial = function(index){
     serials.splice(index,1);
     renderSerials();
 }
 
-function saveDonor(){
-
-    let donors = JSON.parse(localStorage.getItem("donors")) || [];
-    let editIndex = localStorage.getItem("editIndex");
+window.saveDonor = async function(){
 
     let donorData = {
         firstName: document.getElementById("firstName").value,
@@ -117,37 +128,16 @@ function saveDonor(){
         rhFactor: document.getElementById("rhFactor").value,
         birthday: document.getElementById("birthday").value,
         contact: document.getElementById("contact").value,
-        serials: serials
+        serials: serials,
+        createdAt: new Date()
     };
 
-    if(editIndex !== null){
-        donors[editIndex] = donorData;
-        localStorage.removeItem("editIndex");
-    } else {
-        donors.push(donorData);
-    }
-
-    localStorage.setItem("donors", JSON.stringify(donors));
-
-    window.location.href = "tracking.html";
-}
-
-window.onload = function(){
-    let editIndex = localStorage.getItem("editIndex");
-    if(editIndex !== null){
-        let donors = JSON.parse(localStorage.getItem("donors")) || [];
-        let donor = donors[editIndex];
-
-        document.getElementById("firstName").value = donor.firstName;
-        document.getElementById("middleName").value = donor.middleName;
-        document.getElementById("surname").value = donor.surname;
-        document.getElementById("bloodType").value = donor.bloodType;
-        document.getElementById("rhFactor").value = donor.rhFactor;
-        document.getElementById("birthday").value = donor.birthday;
-        document.getElementById("contact").value = donor.contact;
-
-        serials = donor.serials || [];
-        renderSerials();
+    try {
+        await addDoc(collection(db, "donors"), donorData);
+        alert("Donor saved to cloud successfully!");
+        window.location.href = "tracking.html";
+    } catch (error) {
+        alert("Error saving donor: " + error);
     }
 }
 
